fix overlap

--- a/css/project_page.css
+++ b/css/project_page.css
@@ -294,6 +294,10 @@ img.hover-shadow {
   text-align: left;
 }
 
+.iframe {
+  z-index: 1;
+}
+
 
  @media screen and (max-width: 800px) {
   .prev, 
